crates/seele-composer/src/tests/snapshots/seele_composer__execute__tests__execute_submission@submission_needs_complex.yaml.snap
---
source: crates/seele-composer/src/execute.rs
expression: results
input_file: crates/seele-composer/src/tests/submission_needs_complex.yaml
---
[
  Config(
    action: "seele/noop@1",
    test: 1,
  ),
  Config(
    action: "seele/noop@1",
    test: 2111,
  ),
  Config(
    action: "seele/noop@1",
    test: 3,
  ),
  Config(
    action: "seele/noop@1",
    test: 2112,
  ),
  Config(
    action: "seele/noop@1",
    test: 2113,
  ),
  Config(
    action: "seele/noop@1",
    test: 2115,
  ),
  Config(
    action: "seele/noop@1",
    test: 2114,
  ),
]
