crates/seele-composer/src/tests/snapshots/seele_composer__execute__tests__execute_submission@submission_nested_sequence_1.yaml.snap
---
source: crates/seele-composer/src/execute.rs
expression: results
input_file: crates/seele-composer/src/tests/submission_nested_sequence_1.yaml
---
[
  Config(
    action: "seele/noop@1",
    test: 1,
  ),
  Config(
    action: "seele/noop@1",
    test: 21,
  ),
  Config(
    action: "seele/noop@1",
    test: 22,
  ),
  Config(
    action: "seele/noop@1",
    test: 3,
  ),
]
